# near-openapi-client-rs

./: Cargo.toml  generate.sh  openapi.json  progenitor_fixes.py
.github/: CODEOWNERS
.github/workflows/: release-plz.yml
codegen/: Cargo.toml
codegen/src/: ast_transforms.rs  main.rs  spec_fixes.rs
example/: Cargo.toml
example/tests/: tests.rs
near-openapi-client/: Cargo.toml
near-openapi-client/src/: lib.rs
near-openapi-types/: Cargo.toml
near-openapi-types/src/: lib.rs  util.rs
near-openapi-types/tests/: issue_117.rs
