[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/polyprogrammist/near-openapi-client"

[workspace]
members = ["near-openapi-client", "near-openapi-types", "codegen"]
resolver = "2"

[workspace.dependencies]
near-openapi-client = { path = "near-openapi-client" }
near-openapi-types = { path = "near-openapi-types", version = "0.7.0" }
