[workspace.package]
version = "0.7.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/polyprogrammist/near-openapi-client"

[workspace]
members = ["near-openapi-client", "near-openapi-types"]
resolver = "3"

[workspace.dependencies]
near-openapi-client = { path = "near-openapi-client" }
near-openapi-types = { path = "near-openapi-types", version = "0.7.0" }
