[package]
name = "near-openapi-codegen"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
progenitor = "0.12"
openapiv3 = "2.2"
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
anyhow = "1.0"
regex = "1.10"
