[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
near-openapi-client = { path = "../near-openapi-client" }
reqwest = "0.12.12"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1", features = ["full"] }
near-sandbox-utils = "0.15"
near-primitives = { version = "0.34.0", features = ["test_utils"] }
base64 = "0.21"
borsh = "1.5.7"
near-crypto = "0.34.0"

[workspace]
