[package]
name = "near-openapi-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Progenitor-generated client of NEAR JSON RPC API"


[dependencies]
bytes = "1.9"
chrono = { version = "0.4", default-features=false, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.12.0"
reqwest = { version = "0.13", default-features=false, features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"


near-openapi-types.workspace = true
